Add .env.example and ignore .env for security

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,6 @@ DB_NAME=creche_db
 
 # JWT / Auth
 JWT_SECRET=your_jwt_secret
+
+#Pour la prod
+DATABASE_URL=postgresql://user:password@host:port/dbname?sslmode=require&channel_binding=require
